3822B1FI3/9_gelu_ocl/lavrentyev_alexey/log.txt
In file included from /usr/include/CL/cl.h:20,
                 from /home/crazyproger/sandbox/gpu-2025/3822B1FI3/9_gelu_ocl/lavrentyev_alexey/gelu_ocl.cpp:2:
/usr/include/CL/cl_version.h:22:104: note: ‘#pragma message: cl_version.h: CL_TARGET_OPENCL_VERSION is not defined. Defaulting to 300 (OpenCL 3.0)’
   22 | #pragma message("cl_version.h: CL_TARGET_OPENCL_VERSION is not defined. Defaulting to 300 (OpenCL 3.0)")
      |                                                                                                        ^
/home/crazyproger/sandbox/gpu-2025/3822B1FI3/9_gelu_ocl/lavrentyev_alexey/gelu_ocl.cpp:7:1: error: expected ‘,’ or ‘;’ before ‘const’
    7 | const char* GeluKernel = R"(
      | ^~~~~
/home/crazyproger/sandbox/gpu-2025/3822B1FI3/9_gelu_ocl/lavrentyev_alexey/gelu_ocl.cpp: In function ‘std::vector<float> GeluOCL(const std::vector<float>&)’:
/home/crazyproger/sandbox/gpu-2025/3822B1FI3/9_gelu_ocl/lavrentyev_alexey/gelu_ocl.cpp:36:33: warning: ‘_cl_command_queue* clCreateCommandQueue(cl_context, cl_device_id, cl_command_queue_properties, cl_int*)’ is deprecated [-Wdeprecated-declarations]
   36 |     queue = clCreateCommandQueue(context, device, 0, NULL);
      |             ~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /home/crazyproger/sandbox/gpu-2025/3822B1FI3/9_gelu_ocl/lavrentyev_alexey/gelu_ocl.cpp:2:
/usr/include/CL/cl.h:1906:1: note: declared here
 1906 | clCreateCommandQueue(cl_context                     context,
      | ^~~~~~~~~~~~~~~~~~~~
/home/crazyproger/sandbox/gpu-2025/3822B1FI3/9_gelu_ocl/lavrentyev_alexey/gelu_ocl.cpp:38:54: error: ‘GeluKernel’ was not declared in this scope
   38 |     program = clCreateProgramWithSource(context, 1, &GeluKernel, NULL, NULL);
      |                                                      ^~~~~~~~~~
/home/crazyproger/sandbox/gpu-2025/3822B1FI3/9_gelu_ocl/lavrentyev_alexey/gelu_ocl.cpp:54:52: error: cannot convert ‘int*’ to ‘const size_t*’ {aka ‘const long unsigned int*’}
   54 |     clEnqueueNDRangeKernel(queue, kernel, 1, NULL, &grid, &block, 0, NULL, NULL);
      |                                                    ^~~~~
      |                                                    |
      |                                                    int*
In file included from /home/crazyproger/sandbox/gpu-2025/3822B1FI3/9_gelu_ocl/lavrentyev_alexey/gelu_ocl.cpp:2:
/usr/include/CL/cl.h:1728:41: note:   initializing argument 5 of ‘cl_int clEnqueueNDRangeKernel(cl_command_queue, cl_kernel, cl_uint, const size_t*, const size_t*, const size_t*, cl_uint, _cl_event* const*, _cl_event**)’
 1728 |                        const size_t *   global_work_size,
      |                        ~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~
